--- a/public/css/shop-homepage.css
+++ b/public/css/shop-homepage.css
@@ -16,8 +16,8 @@ body {
     margin-right: 20px;
 }
 
-.row {
-    margin-top: 50px;
+.carousel-inner {
+    border-radius: 4px;
 }
 
 .slide-image {
@@ -50,6 +50,14 @@ body {
     width: 100%;
 }
 
+.view article header h1,
+.view article div h2 {
+    font-weight: bold;
+    color: #8d5a3b;
+}
+
+.view article header h3 {}
+
 .ratings {
     padding-right: 10px;
     padding-left: 10px;
@@ -65,6 +73,37 @@ body {
     color: #333;
 }
 
+.article {
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    margin: 0 5px 5px 0;
+    padding: 5px;
+}
+
+.article div a {
+    font-size: 1em;
+}
+
+
+.articles h2{
+    height: 8vh;
+}
+
+.articles img {
+    height: 21vh;
+    min-width: 100%;
+    margin-bottom: 5px;
+}
+
+.panel-title {
+    letter-spacing: 2px;
+    font-size: 1em;
+    font-weight: bold;
+}
+
+.sidebar {
+    margin-top: 80px;
+}
 footer {
     margin: 50px 0;
 }
