--- a/server/views/article/details.hbs
+++ b/server/views/article/details.hbs
@@ -1,5 +1,5 @@
-<div class="col-md-7">
-    <div class="row carousel-holder">
+<div class="col-md-8 center-block">
+    <div class="carousel-holder">
 
         <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
@@ -26,24 +26,24 @@
             </a>
         </div>
     </div>
-    <div class="well">
+    <div class="caption-full view">
         <article>
             <header>
-                <h2>{{title}}</h2>
+                <h1 class="text-center">{{title}}</h1>
             </header>
 
             <div>
-                <h3>Общи сведения</h3>
+                <h2>Общи сведения</h2>
                 <p>{{content1}}</p>
             </div>
 
             <div>
-                <h3>Начин на живот и размножаване</h3>
+                <h2>Начин на живот и размножаване</h2>
                 <p>{{content2}}</p>
             </div>
 
             <div>
-                <h3>Стопанско значение и лов</h3>
+                <h2>Стопанско значение и лов</h2>
                 <p>{{content3}}</p>
             </div>
         </article>
