--- a/server/views/layout.hbs
+++ b/server/views/layout.hbs
@@ -86,21 +86,27 @@
 </nav>
 
 <!-- Page Content -->
-<div class="container">
-        <div class="col-md-3">
-            <p class="lead">Категории</p>
-            <div class="list-group">
-                {{#each categories}}
-                    <a href="/category/articles/{{this.id}}" class="list-group-item">{{title}}</a>
-                {{/each}}
-            </div>
+<div class="container sidebar">
+    <div class="col-md-3 panel panel-footer">
+        <div class="panel-heading">
+            <p class="panel-title text-center">Категории</p>
         </div>
+        <div class="panel-body">
+            <ul class="nav">
+                {{#each categories}}
+                    <li>
+                        <a href="/category/articles/{{this.id}}" class="list-group-item text-center">{{title}}</a>
+                    </li>
+                {{/each}}
+            </ul>
+        </div>
+    </div>
 
-        {{#if error }}
-            <h2>{{error}}</h2>
-        {{/if}}
+    {{#if error }}
+        <h2>{{error}}</h2>
+    {{/if}}
 
-        {{{body}}}
+    {{{body}}}
 
 
     <!-- /.container -->
