--- a/public/css/shop-homepage.css
+++ b/public/css/shop-homepage.css
@@ -10,6 +10,10 @@ body {
     font-size: 2em;
 }
 
+.body-content {
+    margin-top: 5vh;
+}
+
 #header {
     font-size: 1.8em;
     color: white;
@@ -56,7 +60,8 @@ body {
     color: #8d5a3b;
 }
 
-.view article header h3 {}
+.view article header h3 {
+}
 
 .ratings {
     padding-right: 10px;
@@ -84,15 +89,15 @@ body {
     font-size: 1em;
 }
 
-
-.articles h2{
+.articles h2 {
     height: 8vh;
 }
 
 .articles img {
-    height: 21vh;
+    height: 100%;
     min-width: 100%;
     margin-bottom: 5px;
+    max-height: 21vh;
 }
 
 .panel-title {
@@ -101,9 +106,17 @@ body {
     font-weight: bold;
 }
 
+.table-bordered {
+    border-radius: 10px;
+}
+thead th{
+    font-size: 30px;
+}
+
 .sidebar {
     margin-top: 80px;
 }
+
 footer {
     margin: 50px 0;
 }
