--- a/server/views/article/create.hbs
+++ b/server/views/article/create.hbs
@@ -1,3 +1,18 @@
+<div class="col-md-3 panel panel-footer">
+    <div class="panel-heading">
+        <p class="panel-title text-center">Видове дивеч</p>
+    </div>
+    <div class="panel-body">
+        <ul class="nav">
+            {{#each categories}}
+                <li>
+                    <a href="/category/articles/{{this.id}}?page=1"
+                       class="list-group-item text-center">{{title}}</a>
+                </li>
+            {{/each}}
+        </ul>
+    </div>
+</div>
 <div class="col-md-9 row">
         <div class="well">
             <form class="form-horizontal" method="POST" action="/article/create" enctype="multipart/form-data">
