--- a/server/views/home/index.hbs
+++ b/server/views/home/index.hbs
@@ -1,6 +1,20 @@
-<div class="col-md-8">
-    <div class="row carousel-holder">
-
+<div class="col-md-3 panel panel-footer">
+    <div class="panel-heading">
+        <p class="panel-title text-center">Видове дивеч</p>
+    </div>
+    <div class="panel-body">
+        <ul class="nav">
+            {{#each categories}}
+                <li>
+                    <a href="/category/articles/{{this.id}}?page=1"
+                       class="list-group-item text-center">{{title}}</a>
+                </li>
+            {{/each}}
+        </ul>
+    </div>
+</div>
+<div class="row col-md-8">
+    <div class="carousel-holder">
         <div class="col-md-12">
             <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
@@ -27,7 +41,6 @@
                 </a>
             </div>
         </div>
-
     </div>
 
     <div class="text-center">
@@ -86,3 +99,5 @@
         </p>
     </div>
 </div>
+
+
