--- a/server/views/article/category-articles.hbs
+++ b/server/views/article/category-articles.hbs
@@ -15,7 +15,7 @@
 </div>
 <div class="articles row col-md-9 center-block">
     {{#each articles}}
-        <div class=" col-sm-3 article">
+        <div class="col-lg-3 col-sm-4 col-xs-6 article">
             <h2 class="text-center">{{this.title}}</h2>
 
             <div>
@@ -26,7 +26,7 @@
             </div>
         </div>
     {{/each}}
-    <div class="col-sm-12">
+    <div class="col-lg-12 col-sm-12 col-xs-12">
         <ul class="pagination">
             {{#if pages}}
                 {{#each pages}}
