--- a/server/views/layout.hbs
+++ b/server/views/layout.hbs
@@ -15,6 +15,14 @@
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <script
+            src="https://code.jquery.com/jquery-3.2.1.min.js"
+            integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+            crossorigin="anonymous"></script>
+
+    <!--Gallery-->
+    <link rel="stylesheet" href="/css/lightgallery.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/lightgallery/1.3.9/css/lightgallery.css">
 
     <!-- Custom CSS -->
     <link href="/css/shop-homepage.css" rel="stylesheet">
@@ -54,26 +62,27 @@
                     <a href="/calendar/1">Ловен календар</a>
                 </li>
                 <li>
-                    <a href="#">Методи за лов</a>
+                    <a href="/methods">Методи за лов</a>
                 </li>
                 <li>
-                    <a href="#">Галерия</a>
+                    <a href="/gallery">Галерия</a>
                 </li>
                 <li>
                     <a href="#">Контакти</a>
                 </li>
-                <li><a>|</a></li>
-                {{#if currentUser}}
-                    <li><a>Здравей({{currentUser.username}})</a></li>
-                    <li><a href="/article/create">Нова Статия</a></li>
-                    <li><a href="/category/create">Нова Категория</a></li>
-                    <li><a href="/user/logout">Излез</a></li>
-                {{/if}}
-                {{#unless currentUser}}
+                <!--TODO admin panel-->
+                <!--<li><a>|</a></li>-->
+                <!--{{#if currentUser}}-->
+                    <!--<li><a>Здравей({{currentUser.username}})</a></li>-->
+                    <!--<li><a href="/article/create">Нова Статия</a></li>-->
+                    <!--<li><a href="/category/create">Нова Категория</a></li>-->
+                    <!--<li><a href="/user/logout">Излез</a></li>-->
+                <!--{{/if}}-->
+                <!--{{#unless currentUser}}-->
 
-                    <li><a href="/user/login">Влез</a></li>
+                    <!--<li><a href="/user/login">Влез</a></li>-->
 
-                {{/unless}}
+                <!--{{/unless}}-->
             </ul>
         </div>
         <!-- /.navbar-collapse -->
@@ -111,7 +120,10 @@
 
 <!-- Bootstrap Core JavaScript -->
 <script src="/js/bootstrap.min.js"></script>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.min.js"></script>
+<script src="/js/lightgallery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/lightgallery/1.3.9/js/lightgallery.min.js"></script>
+<script src="/js/lg.js"></script>
 </body>
 
 </html>
