--- a/server/views/layout.hbs
+++ b/server/views/layout.hbs
@@ -26,6 +26,7 @@
 
     <!-- Custom CSS -->
     <link href="/css/shop-homepage.css" rel="stylesheet">
+    <link href="/css/contacts.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -68,7 +69,7 @@
                     <a href="/gallery">Галерия</a>
                 </li>
                 <li>
-                    <a href="#">Контакти</a>
+                    <a href="/contacts">Контакти</a>
                 </li>
                 <!--TODO admin panel-->
                 <!--<li><a>|</a></li>-->
