--- a/public/css/shop-homepage.css
+++ b/public/css/shop-homepage.css
@@ -60,15 +60,6 @@ body {
     color: #8d5a3b;
 }
 
-.view article header h3 {
-}
-
-.ratings {
-    padding-right: 10px;
-    padding-left: 10px;
-    color: #d17581;
-}
-
 .thumbnail {
     padding: 0;
 }
@@ -90,15 +81,35 @@ body {
 }
 
 .articles h2 {
-    height: 9vh;
+   height: 10vh;
 }
 
-.articles img {
-    height: 100%;
-    min-width: 100%;
-    margin-bottom: 5px;
-    max-height: 21vh;
+.thmb img{
+    max-width: 100%; /* do not stretch the bootstrap column */
 }
+
+.img-wrapper{
+    width: 100%;
+    padding-bottom: 90%; /* your aspect ratio here! */
+    position: relative;
+}
+
+.img-wrapper img{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%; /* optional: if you want the smallest images to fill the .thumbnail */
+
+}
+/*.articles img {*/
+    /*height: 100%;*/
+    /*min-width: 100%;*/
+    /*margin-bottom: 5px;*/
+    /*max-height: 21vh;*/
+/*}*/
 
 .panel-title {
     letter-spacing: 2px;
