--- a/public/css/shop-homepage.css
+++ b/public/css/shop-homepage.css
@@ -6,8 +6,8 @@
 
 body {
     padding-top: 70px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
-    font-family: "Monotype Corsiva", Helvetica, sans-serif;
-    font-size: 2em;
+    font-family: "Helvetica Neue", Helvetica, sans-serif;
+    font-size: 1.7em;
 }
 
 .body-content {
