--- a/server/views/home/index.hbs
+++ b/server/views/home/index.hbs
@@ -24,13 +24,13 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="item active">
-                        <img class="slide-image" src="images/home/1.JPG" alt="">
+                        <img class="slide-image" src="/images/home/1.JPG" alt="">
                     </div>
                     <div class="item">
-                        <img class="slide-image" src="images/home/2.JPG" alt="">
+                        <img class="slide-image" src="/images/home/2.JPG" alt="">
                     </div>
                     <div class="item">
-                        <img class="slide-image" src="images/home/3.jpg" alt="">
+                        <img class="slide-image" src="/images/home/3.jpg" alt="">
                     </div>
                 </div>
                 <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
