--- a/server/views/methods/methods.hbs
+++ b/server/views/methods/methods.hbs
@@ -1,6 +1,6 @@
 <div class="col-md-3 panel panel-footer">
     <div class="panel-heading">
-        <p class="panel-title text-center">Видове дивеч</p>
+        <p class="panel-title text-center">Методи за лов</p>
     </div>
     <div class="panel-body">
         <ul class="nav">
