--- a/server/views/home/index.hbs
+++ b/server/views/home/index.hbs
@@ -24,13 +24,13 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="item active">
-                        <img class="slide-image" src="/images/home/1.JPG" alt="">
+                        <img class="slide-image" src="/images/home/2.JPG" alt="Image Not Found">
                     </div>
                     <div class="item">
-                        <img class="slide-image" src="/images/home/2.JPG" alt="">
+                        <img class="slide-image" src="/images/home/2.JPG" alt="Image Not Found">
                     </div>
                     <div class="item">
-                        <img class="slide-image" src="/images/home/3.jpg" alt="">
+                        <img class="slide-image" src="/images/home/2.JPG" alt="Image Not Found">
                     </div>
                 </div>
                 <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
@@ -43,7 +43,7 @@
         </div>
     </div>
 
-    <div class="text-center">
+    <div>
         <p>
             Когато говорим за мъжки хобита, задължително трябва да обърнем внимание на едно от обичайните и най-често
             практикуваните – ловът.
