--- a/server/views/home/index.hbs
+++ b/server/views/home/index.hbs
@@ -30,7 +30,7 @@
                         <img class="slide-image" src="/images/home/2.JPG" alt="Image Not Found">
                     </div>
                     <div class="item">
-                        <img class="slide-image" src="/images/home/3.JPG" alt="Image Not Found">
+                        <img class="slide-image" src="/images/home/three.JPG" alt="Image Not Found">
                     </div>
                 </div>
                 <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
@@ -43,7 +43,7 @@
         </div>
     </div>
 
-    <div>
+    <div class="text">
         <p>
             Когато говорим за мъжки хобита, задължително трябва да обърнем внимание на едно от обичайните и най-често
             практикуваните – ловът.
