--- a/public/css/shop-homepage.css
+++ b/public/css/shop-homepage.css
@@ -13,6 +13,9 @@ body {
 .body-content {
     margin-top: 5vh;
 }
+.text {
+    padding-left: 10px;
+}
 
 #header {
     font-size: 1.8em;
@@ -22,6 +25,7 @@ body {
 
 .carousel-inner {
     border-radius: 4px;
+    margin-bottom: 20px;
 }
 
 .slide-image {
