--- a/server/views/layout.hbs
+++ b/server/views/layout.hbs
@@ -106,7 +106,7 @@
 
     <!-- Footer -->
     <footer>
-        <div class="row">
+        <div class="row text-center">
             <div class="col-lg-12">
                 <p>Copyright &copy; Hunting Website 2017</p>
             </div>
