--- a/server/views/contacts/contacts.hbs
+++ b/server/views/contacts/contacts.hbs
@@ -13,7 +13,7 @@
                     <div class="col-md-4">
                         <div class="row contact row-first">
                             <div class="col-md-6">
-                                <a href="https://github.com/PetarVelichkov/Hunting-Website" target="_blank" class="github"><i class="fa fa-github" aria-hidden="true"></i>GitHub Project</a>
+                                <a href="https://github.com/PetarVelichkov/Hunting-Website" target="_blank" class="github"><i class="fa fa-github" aria-hidden="true"></i>Project</a>
                             </div>
                             <div class="col-md-6">
                                 <a href="https://github.com/PetarVelichkov" target="_blank" class="github"><i class="fa fa-github" aria-hidden="true"></i>My GitHub</a>
