--- a/server/views/article/category-articles.hbs
+++ b/server/views/article/category-articles.hbs
@@ -16,7 +16,7 @@
 <div class="articles row col-md-9 center-block">
     {{#each articles}}
         <div class="col-lg-3 col-sm-4 col-xs-6 article">
-            <h2 class="text-center text-wrapper">{{this.title}}</h2>
+            <h2 class="text-center">{{this.title}}</h2>
 <div class="thmb">
             <div class="img-wrapper">
                 <img src="/{{this.image1}}" alt="Photo" class="img-responsive img-thumbnail">
