--- a/server/views/contacts/contacts.hbs
+++ b/server/views/contacts/contacts.hbs
@@ -3,14 +3,14 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-lg-4 col-sm-4 col-xs-12">
                         <h1 class="title-contact">Контакти</h1>
                     </div>
-                    <div class="col-md-4 contact-email">
-                        <h2>petio.kv@gmail.com</h2>
+                    <div class="col-lg-4 col-sm-4 col-xs-12 contact-email">
+                        <h3>petio.kv@gmail.com</h3>
                         <h3>+359 877 988 658</h3>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-lg-4 col-sm-4 col-xs-12">
                         <div class="row contact row-first">
                             <div class="col-md-6">
                                 <a href="https://github.com/PetarVelichkov/Hunting-Website" target="_blank" class="github"><i class="fa fa-github" aria-hidden="true"></i>Project</a>
